# c-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test.yml  tests.yml
include/: hello.h
src/: hello.c  main.c
